# cortalv2i

./: LICENSE  README.md  config.yaml  project_structure.txt  pyproject.toml  requirements.txt
cortalv2i/: audio_extractor.py  config.yaml  dir_manage.py  extract_audio.py  extract_frames.py  frame_extractor.py  main.py  utils.py  video2img.py  video_chunker.py  video_processor.py
cortalv2i.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cortalv2i/cli/: commands.py
cortalv2i/core/: audio_extractor.py  video_chunker.py  video_processor.py
cortalv2i/utils/: utils.py
tests/: test_frame_extractor.py  test_main.py  test_video_processor.py
