[project]
name = "cortalv2i"
version = "0.1.0"
description = "A video processing and frame extraction SDK"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "opencv-python~=4.5.5",
    "yt-dlp~=2021.12.27",
    "tqdm~=4.62.3",
    "scenedetect~=0.6.1",
    "pydub~=0.25.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cortalv2i"]