[project]
name = "cortalv2i"
version = "0.1.0"
description = "A video processing and frame extraction SDK"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "opencv-python>=4.5.5",
    "yt-dlp>=2021.12.27",
    "tqdm>=4.62.3",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pydub>=0.25.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["video", "processing", "frame extraction", "audio extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/cortalv2i"
Repository = "https://github.com/yourusername/cortalv2i.git"
Documentation = "https://github.com/yourusername/cortalv2i#readme"
"Bug Tracker" = "https://github.com/yourusername/cortalv2i/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cortalv2i"]
